--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root{
+  --index: calc(1vw + 1vh);
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,6 +23,44 @@ img{
   transition: transform 0.3s ease-in-out;
 }
 img:hover{
-/* transform: scale(1.3); */
 transform: translateX(-40%) scale(1.5);
+}
+body > div > div{
+  height: 100vh;
+  padding: clamp(1vw,10vw,7vw);
+  display: flex;
+  align-items: center;
+}
+body > div > div > div > p{
+  width: 80%;
+  color: white;
+  font-size:calc(var(--index) * 0.8);
+}
+body > div > div > div > a{
+  text-decoration: none;
+  font-size:calc(var(--index) * 1);
+  font-weight: 600;
+}
+body > div > div > img{
+  width: 50%;
+  background-position: center;
+  border: 1px solid #2b2828;
+  border-radius: 12px;
+  object-fit: cover;
+  box-shadow: 0 13px 27px -5px #32325d40, 0 8px 16px -8px #0000004d, 0 -6px 16px -6px #00000008;  
+}
+@media (max-width: 800px) {
+  body > div > div{
+    padding: clamp(1vw,10vw,7vw);
+  }
+  body > div > div > div > p{
+    width: 90%;
+    margin: inherit;
+    font-size:calc(var(--index) * 0.7);
+  }
+}
+@media (max-width:560px) {
+  body > div > div > div > h1{
+    font-size:calc(var(--index) * 1.2);
+  }
 }
