--- a/src/index.css
+++ b/src/index.css
@@ -1,83 +1,84 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-:root{
+:root {
   --index: calc(1vw + 1vh);
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
-img{
+img {
   scale: 1;
   transition: transform 0.3s ease-in-out;
 }
-img:hover{
-transform: translateX(-40%) scale(1.5);
+img:hover {
+  transform: translateX(-40%) scale(1.5);
 }
-body > div > div{
+body > div > div {
   height: 100vh;
-  padding: calc(var(--index) * 6);
+  padding: 0 calc(var(--index) * 6);
   display: flex;
   align-items: center;
 }
-body > div > div > div > p{
+body > div > div > div > p {
   width: 80%;
   color: white;
-  font-size:calc(var(--index) * 0.8);
+  font-size: calc(var(--index) * 0.8);
 }
-body > div > div > div > a{
+body > div > div > div > a {
   text-decoration: none;
-  font-size:calc(var(--index) * 1.6);
+  font-size: calc(var(--index) * 1.6);
   font-weight: 600;
 }
-body > div > div > img{
+body > div > div > img {
   width: 50%;
   background-position: center;
   border: 1px solid #2b2828;
   border-radius: 12px;
   object-fit: cover;
-  box-shadow: 0 13px 27px -5px #32325d40, 0 8px 16px -8px #0000004d, 0 -6px 16px -6px #00000008;  
+  box-shadow: 0 13px 27px -5px #32325d40, 0 8px 16px -8px #0000004d,
+    0 -6px 16px -6px #00000008;
 }
-.Toastify{
+.Toastify {
   height: auto;
   padding: 0;
-  
 }
 @media (max-width: 800px) {
-  body > div > div{
+  body > div > div {
     display: inline-block;
     padding: calc(var(--index) * 5) calc(var(--index) * 3);
   }
-  body > div > div > div{
+  body > div > div > div {
     width: 100% !important;
     margin-bottom: 15px;
   }
-  body > div > div > div > p{
+  body > div > div > div > p {
     width: 100%;
     margin: 0;
-    font-size:calc(var(--index) * 1.4);
+    font-size: calc(var(--index) * 1.4);
   }
-  body > div > div > div > h1{
-    font-size:calc(var(--index) * 2.6);
+  body > div > div > div > h1 {
+    font-size: calc(var(--index) * 2.6);
   }
-  body > div > div > img{
-    width: 100%; 
+  body > div > div > img {
+    width: 100%;
   }
-  .visible, .hidden{
+  .visible,
+  .hidden {
     display: inline-block;
   }
-  img:hover{
+  img:hover {
     transform: none;
   }
 }
